attached_assets/Pasted-bitnami-ip-172-26-10-121-opt-bitnami-apache-htdocs-Voya_1765076675053.txt
bitnami@ip-172-26-10-121:/opt/bitnami/apache/htdocs/VoyagerAthena$ cat /opt/bitnami/apache/htdocs/VoyagerAthena/logs/pm2-error-0.log | tail -100
2025-12-02T11:39:32: 2025-12-07T03:01:40: 2025-12-07T03:01:43: 2025-12-07T03:01:46: 2025-12-07T03:01:49: 2025-12-07T03:01:51: 2025-12-07T03:01:54: 2025-12-07T03:01:57: 2025-12-07T03:02:00: 2025-12-07T03:02:03: 2025-12-07T03:02:06: 2025-12-07T03:02:09: 2025-12-07T03:02:12: 2025-12-07T03:02:14: 2025-12-07T03:02:17: 2025-12-07T03:02:20: 2025-12-07T03:02:22: 2025-12-07T03:02:25: 2025-12-07T03:02:28: 2025-12-07T03:02:30: 2025-12-07T03:02:33: 2025-12-07T03:02:36: 2025-12-07T03:02:39: 2025-12-07T03:02:41: 2025-12-07T03:02:44: 2025-12-07T03:02:47: 2025-12-07T03:02:49: 2025-12-07T03:02:52: 2025-12-07T03:02:55: 2025-12-07T03:02:57: 2025-12-07T03:03:00: 2025-12-07T03:03:04: 2025-12-07T03:03:06: 2025-12-07T03:03:09: 2025-12-07T03:03:12: 2025-12-07T03:03:14: 2025-12-07T03:03:17: 2025-12-07T03:03:20: 2025-12-07T03:03:23: 2025-12-07T03:03:25: 2025-12-07T03:03:28: 2025-12-07T03:03:31: 2025-12-07T03:03:34: 2025-12-07T03:03:37: 2025-12-07T03:03:39: 2025-12-07T03:03:42: 2025-12-07T03:03:45: 2025-12-07T03:03:47: 2025-12-07T03:03:50: 2025-12-07T03:03:53: 2025-12-07T03:03:55: 2025-12-07T03:03:58: 2025-12-07T03:04:01: bitnami@ip-172-26-10-bitnami@ip-172-26-10-121:/opt/bitnami/apache/htdocs/VoyagerAthena$ cd /opt/bitnami/apache/htdocs/VoyagerAthena
npm run dev

> rest-express@1.0.0 dev
> NODE_ENV=development tsx server/index.ts

/opt/bitnami/apache/htdocs/VoyagerAthena/server/db.ts:1
import { Pool } from 'pg';
         ^

SyntaxError: The requested module 'pg' does not provide an export named 'Pool'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0
